--- a/taskbar.css
+++ b/taskbar.css
@@ -34,7 +34,8 @@
 .tbIndicator {
     width: 30px;
     height: 5px;
-    left: 5px;
+    left: 12px;
+    position: absolute;
     background: var(--tb-indicator);
     border-radius: 100px;
     transition: opacity .1s;
