--- a/res/style/css.css
+++ b/res/style/css.css
@@ -53,7 +53,7 @@ body {
         --scrollbar: rgba(255, 255, 255, 0.4);
         --scrollbar-hov: rgba(255, 255, 255, 0.6);
         --taskbar: #efedec;
-        --startMenu: #efedec96;
+        --startMenu: #efedec;
         --searchBar: #ffffff;
         --searchBar2: #ffffff;
         --searchBar-border: #dddddd;
