--- a/res/style/startMenu.css
+++ b/res/style/startMenu.css
@@ -2,11 +2,11 @@
     z-index: 10;
     position: absolute;
     left: 50%;
-    bottom: calc(var(--tbSizeM) + 5px);
+    bottom: 40px;
     transform: translateX(-50%) translateY(100%);
     box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.2);
     width: 700px;
-    height: 750px;
+    height: 640px;
     max-height: 100%;
     max-width: 100%;
     background-color: var(--startMenu);
