--- a/res/style/startMenu.css
+++ b/res/style/startMenu.css
@@ -1,9 +1,7 @@
 .startMenu {
     z-index: 10;
     position: absolute;
-    left: 50%;
     bottom: 40px;
-    transform: translateX(-50%) translateY(100%);
     box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.2);
     width: 700px;
     height: 640px;
@@ -271,21 +269,14 @@
 
 @media screen and (max-width: 600px) {
     .startMenu {
-        width: 95%;
-        height: calc(100% - 80px);
-        top: 10px;
+        height: calc(100% - 0px);
+        bottom: unset;
     }
     .smbSect1,
-    .searchBar {
-        width: 86%;
-    }
     .ss2Icon {
         width: 20%;
     }
     .ss2Icon:hover {
         background-color: transparent;
-    }
-    .ss1Btn:hover {
-        background-color: var(--searchBar);
     }
 }
