--- a/res/style/css.css
+++ b/res/style/css.css
@@ -67,7 +67,7 @@ body {
         --tb-hov: #FFFFFF;
         --icn-hov: #ffffff60;
         --btn-hov: #eeeeee;
-        --start-btn: url(res/img/btnIcons/startDark.svg);
+        --start-btn: url(../../res/img/btnIcons/startDark.svg);
         --tskvw-btn: url(../img/btnIcons/taskviewDark.svg);
         --storeIcon: url(../img/Icons/MicrosoftStoreDark.png);
         --stickiesIcon: url(../img/Icons/MicrosoftStickyNotesDark.png);
